# tcc

./: CMakeLists.txt  main.c  run.bat
DataBase/postgres/: db_config.h  tcc_db.c  tcc_db.h
TCC/: TCC_ASTS.h  TCC_STS.h  TCC_compute_shader.h  TCC_error.h  TCC_money.h  TCC_thr_config.h
TCC/core/: TCC_STS.c  TCC_compute_shader.c  TCC_money.c
TCC/infra/: TCC_money_load.c
TCC/utils/: TCC_cpuInfo.h  TCC_error.h  TCC_timer.h
app/: TCC
